--- a/index.html
+++ b/index.html
@@ -412,6 +412,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/new-texas-facility">StoneAge Houston is Moving</a></h4>
+        <p>To better serve our customers with increased inventory and rental capabilities, StoneAge Houston is moving to a new location.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/free-sewer-tools-for-houston">Warthogs for Houston</a></h4>
         <p>StoneAge is donating over $100K in Warthog sewer tools to aid Houston and surrounding communities with cleanup efforts after hurricane Harvey.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
