--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -63,10 +63,11 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Quick install to your existing ABX-2L</li>
+        <li>Quick install to your existing AutoBox ABX-2L or ABX-3L</li>
         <li>Automated forward and reverse tool motion to clear obstructions</li>
         <li>Adjustable sensitivity for changing job conditions</li>
         <li>Adjustable retract distance allows nozzle to regain rotation</li>
+        <li>Battery and pneumatic power options</li>
       </ul>
       
       <div class="accessories">
@@ -103,13 +104,13 @@ master-slider: yes
             </tr>
             <tr>
               <th>Dimensions</th>
-              <td>11.5 x 10.5 x 7.5 in</td>
-              <td><span class="metric">351 x 320 x 229 cm</span><br></td>
+              <td>14.0 x 10.5 x 7.5 in.</td>
+              <td><span class="metric">355 x 267 x 191 mm</span><br></td>
             </tr>
             <tr>
               <th>Weight</th>
-              <td>10 lb</td>
-              <td><span class="metric">4.5 kg</span></td>
+              <td>18 lb</td>
+              <td><span class="metric">8.2 kg</span></td>
             </tr>
             <tr>
               <th>Umbilical Hose Length</th>
