--- a/loc-houston.html
+++ b/loc-houston.html
@@ -30,10 +30,10 @@ contact-houston: yes
   <main>
     <section class="container padding-tb-30 margin-bottom-30">
       <aside class="col-sm-3 margin-bottom-30 cta">
-        <img src="../assets/img/stoneage-houston-pansy-st.jpg" class="img-responsive img-thumbnail" alt="StoneAge Houston office">
+        <img src="../assets/img/stoneage-houston-main-st.jpg" class="img-responsive img-thumbnail" alt="StoneAge Houston office">
         <div class="padding-tb-30">
           <p><span class="slab">StoneAge Houston</span><br/>
-            2150 Pansy St.<br/>Pasadena, TX 77503<br/><br/>
+           301 E. Main St.<br/>La Porte, TX 77571<br/><br/>
             +1 (281) 888-5069 <br/>
             <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm CST</small></p>
