AST, jetting app, and misc updates - AST not yet live

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ landing: yes
   
   <!-- new slide -->
   <div class="ms-slide">
-    <img src="/assets/img/features/bg_red_rain.jpg" data-src="/assets/img/features/bg_red_rain.jpg" alt="lorem ipsum dolor sit"/> 
+    <img src="/assets/img/features/bg_bronze.jpg" data-src="/assets/img/features/bg_bronze.jpg" alt="StoneAge background"/> 
 
     <div class="ms-layer feature-h1" style="width:400px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -92,7 +92,7 @@ landing: yes
       data-offset-y="-83" 
       data-origin="ml" 
       data-position="normal"   
-      data-masked="true">Sewer Tools for Houston
+      data-masked="true">Jetting App 2.0
     </div>
 
     <div class="ms-layer feature-h2" style="width:300px;"   
@@ -101,12 +101,12 @@ landing: yes
       data-delay="1600" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="16" 
+      data-offset-y="0" 
       data-origin="ml" 
-      data-position="normal">StoneAge is donating a fleet of Warthog sewer nozzles to the hurricane relief effort
+      data-position="normal">Announcing a major update to our jetting and pressure calculators
     </div>
 
-    <a href="http://news.stoneagetools.com/free-sewer-tools-for-houston" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="http://news.stoneagetools.com/updated-jetting-app-is-here" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -118,14 +118,14 @@ landing: yes
        data-position="normal">More Info
     </a>
 
-    <img class="ms-layer" src="/assets/img/features/warthogs-for-houston.png" 
-       data-src="/assets/img/features/warthogs-for-houston.png" alt="Warthog sewer nozzles" style=""  
+    <img class="ms-layer" src="/assets/img/features/jetting-app.png" 
+       data-src="/assets/img/features/jetting-app.png" alt="StoneAge Jetting App 2.0" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
        data-ease="easeOutQuint"       
        data-parallax="90" 
        data-type="image"          
-       data-offset-x="0" 
-       data-offset-y="0" 
+       data-offset-x="60" 
+       data-offset-y="30" 
        data-origin="mr" 
        data-position="normal"
      />
@@ -398,13 +398,11 @@ landing: yes
       <h2>Latest News</h2>
     </div>
     <ul class="home-news list-unstyled">
-<!--
       <li>
-        <h4><a href="http://news.stoneagetools.com/new-texas-facility">StoneAge Houston is Moving</a></h4>
-        <p>To better serve our customers with increased inventory and rental capabilities, StoneAge Houston is moving to a new location.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
+        <h4><a href="http://news.stoneagetools.com/updated-jetting-app-is-here">Jetting App 2.0</a></h4>
+        <p>StoneAge is pleased to announce Jetting App 2.0, a major update to our waterblasting calculators.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, October 2017</small></p>
       </li>
--->
       <li>
         <h4><a href="http://news.stoneagetools.com/free-sewer-tools-for-houston">Warthogs for Houston</a></h4>
         <p>StoneAge is donating over $100K in Warthog sewer tools to aid Houston and surrounding communities with cleanup efforts after hurricane Harvey.<br>
@@ -425,11 +423,6 @@ landing: yes
         <p>The ProDrain PRO-700 accessory optimizes the versatile AutoBox ABX-PRO single lance tractor to safely and quickly clean floor drains.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
       </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/fully-loaded-for-fall-shutdowns">Fully Loaded Fall Shutdown Special</a></h4>
-        <p>Select Automated Equipment purchases come "Fully Loaded" with nozzles and hoses for the job.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
-      </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
@@ -438,17 +431,17 @@ landing: yes
   <!-- KP's Vid -->
   <div class="col-sm-3">
     <div class="section-heading">
-      <h2>Message from the CEO</h2>
+      <h2>Featured Video</h2>
     </div>
     
     <!-- Lightbox call -->
     <div>
-      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sa-eu-vid">
-        <img src="assets/vid/thumb/sa-eu-vid.jpg" alt="StoneAge Europe video" class="img-responsive" />
+      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sa-dtv-vid">
+        <img src="assets/vid/thumb/sa-dtv-vid.jpg" alt="StoneAge DurangoTV video" class="img-responsive" />
       </a>
     </div>
     <!-- End Lightbox call -->
-    <p><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></p>
+    <p>Made in Durango: StoneAge Tools</p>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
     </div>
