--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -28,17 +28,21 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-01.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-ast-01.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-06.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-ast-06.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/ysEzQ_8Yt5U"> </a>
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-03.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-ast-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-07.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-ast-07.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-04.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-ast-04.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-05.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-ast-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
