fix jetting app links, etc.

--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -116,7 +116,7 @@ master-slider: yes
 -->
                 <tr>
                   <th>Rotation Speed</th>
-                  <td colspan="2">30-70 rpm</td>
+                  <td colspan="2">10-50 rpm</td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
@@ -207,7 +207,7 @@ master-slider: yes
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-125 Data Sheet</a></li>
                 <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com/#/t/sc" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
