--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -367,7 +367,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/tool-talks/RPT_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Raptor Tool Talk</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
