--- a/sewer-tools-nozzles/warthog-descaling-heads.html
+++ b/sewer-tools-nozzles/warthog-descaling-heads.html
@@ -374,7 +374,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com/#/t/sw" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
 <!--
                 <li><a href="/assets/pdf/manuals/WG_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;WG-1 Descaler Jetting Chart</a></li>
                 <li><a href="/assets/pdf/manuals/WG_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;WH-3/4 Descaler Jetting Chart</a></li>
