--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -199,15 +199,15 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+        <a href="/od-pipe-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-pipe-od-01.jpg" alt="Outside diameter pipe cleaner">
+        <h5>OD Pipe Cleaner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/gopher"><img class="img-responsive" src="/assets/img/product/thumb-gopher-01.jpg" alt="Gopher pipe cleaning tools">
         <h5>Gopher Rotary Tools</h5></a>
       </div>
       <div class="item">
-        <a href="/2inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
-        <h5>2" Badger Pipe Cleaning Tools</h5></a>
-      </div>
-      <div class="item">
-        <a href="/rotary-swivels"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
+        <a href="/sg-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
         <h5>SG Swilvel Models</h5></a>
       </div>
       <div class="item">
