--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -261,7 +261,7 @@ master-slider: yes
         <h5>AutoBox ABX-PRO</h5></a>
       </div>
       <div class="item">
-        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+        <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-bt-07.jpg" alt="Banshee Beetle tube cleaning tools">
         <h5>Beetle</h5></a>
       </div>
       <div class="item">
