--- a/downhole-tools/spincat-sc-212.html
+++ b/downhole-tools/spincat-sc-212.html
@@ -152,7 +152,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com/#/t/sc" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
