--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -135,8 +135,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–20 gpm</td>
-                      <td><span class="metric">19–76 l/min</span></td>
+                      <td>3–20 gpm</td>
+                      <td><span class="metric">11–76 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -204,8 +204,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–20 gpm</td>
-                      <td><span class="metric">19–76 l/min</span></td>
+                      <td>3–20 gpm</td>
+                      <td><span class="metric">11–76 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -273,8 +273,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–20 gpm</td>
-                      <td><span class="metric">19–76 l/min</span></td>
+                      <td>3–15 gpm</td>
+                      <td><span class="metric">11–57 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -344,7 +344,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger Tool Talk</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
