--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -468,7 +468,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/tool-talks/BC_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Barracuda Tool Talk</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
