--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -197,7 +197,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+                <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
 -->
