spec updated per Matt H

--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -148,7 +148,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/4 NPT or 1/4 BSPP (based on model)</td>
+                      <td colspan="2">1/4 NPT, 1/4 BSPP</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -217,7 +217,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 RH</td>
+                      <td colspan="2">3/8-24 MP RH</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -286,7 +286,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 LH, 9/16 RH (based on model)</td>
+                      <td colspan="2">9/16-18 MP LH &amp; RH</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
