--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -137,7 +137,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 NPT or 3/8 BSPP (based on model)</td>
+                      <td colspan="2">3/8 NPT, 3/8 BSPP</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -275,7 +275,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 HP Female</td>
+                      <td colspan="2">3/8 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
