--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -202,7 +202,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP or M24 (based on model)</td>
+                      <td colspan="2">9/16 MP Gland, M24</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
