--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -154,20 +154,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">M7, 1/16 NPT, 1/4 LH/RH MP</td>
+                      <td colspan="2">M7, 1/16 NPT, 1/4-28 MP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.4 in.</td>
                       <td><span class="metric">10 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>2.6 in.</td>
                       <td><span class="metric">65 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.05 lb</td>
                       <td><span class="metric">0.02 kg</span></td>
                     </tr>
@@ -217,20 +217,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/8 NPT, 1/8 BSPP, 1/4 LH,<br/>1/4 RH, 3/8 LH, 3/8 RH</td>
+                      <td colspan="2">1/8 NPT, 1/8 BSPP, 1/4-28 MP LH &amp; RH, 3/8-28 MP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.5 in.</td>
                       <td><span class="metric">13 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>2.9 in.</td>
                       <td><span class="metric">74 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.10 lb</td>
                       <td><span class="metric">0.05 kg</span></td>
                     </tr>
@@ -280,20 +280,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/8 NPT, 1/8 BSPP, 3/8 LH/RH</td>
+                      <td colspan="2">1/8 NPT, 1/8 BSPP, 3/8-28 MP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.6 in.</td>
                       <td><span class="metric">15 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>3.0 in.</td>
                       <td><span class="metric">76 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.15 lb</td>
                       <td><span class="metric">0.07 kg</span></td>
                     </tr>
@@ -343,20 +343,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/4 NPT, 1/4 BSPP, 9/16 LH, 9/16 RH</td>
+                      <td colspan="2">1/4 NPT, 1/4 BSPP, 9/16-18 MP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.7 in.</td>
                       <td><span class="metric">18 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>3.8 in.</td>
                       <td><span class="metric">97 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.25 lb</td>
                       <td><span class="metric">0.11 kg</span></td>
                     </tr>
@@ -406,20 +406,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 NPT, 3/8 BSPP, 9/16 LH, 9/16 RH</td>
+                      <td colspan="2">3/8 NPT, 3/8 BSPP, 9/16-18 MP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.9 in.</td>
                       <td><span class="metric">24 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>5.1 in.</td>
                       <td><span class="metric">130 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.60 lb</td>
                       <td><span class="metric">0.27 kg</span></td>
                     </tr>
@@ -469,20 +469,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/2 NPT, 1/2 BSPP or 9/16 MP</td>
+                      <td colspan="2">1/2 NPT, 1/2 BSPP or 9/16 MP Gland</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>1.3 in.</td>
                       <td><span class="metric">33 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>6.9 in.</td>
                       <td><span class="metric">180 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>1.8 lb</td>
                       <td><span class="metric">0.81 kg</span></td>
                     </tr>
@@ -560,20 +560,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/4 LH, 3/8 LH</td>
+                      <td colspan="2">1/4-28 HP LH &amp; RH, 3/8 HP LH &amp; RH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.5 in.</td>
                       <td><span class="metric">13 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>3.5 in.</td>
                       <td><span class="metric">89 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.10 lb</td>
                       <td><span class="metric">0.05 kg</span></td>
                     </tr>
@@ -631,20 +631,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 LH, M14L, 9/16 LH, 9/16 RH</td>
+                      <td colspan="2">3/8 HP LH &amp; RH, 9/16-18 HP LH &amp; RH, M14 LH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>0.7 in.</td>
                       <td><span class="metric">18 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>4.7 in.</td>
                       <td><span class="metric">120 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.30 lb</td>
                       <td><span class="metric">0.14 kg</span></td>
                     </tr>
@@ -703,20 +703,20 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 LH, M14L</td>
+                      <td colspan="2">9/16-18 HP LH, M14 LH</td>
                     </tr>
                     <tr>
-                      <th>Swivel Diameter</th>
+                      <th>Tool Diameter</th>
                       <td>1.1 in.</td>
                       <td><span class="metric">27 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Length</th>
+                      <th>Tool Length</th>
                       <td>5.5 in.</td>
                       <td><span class="metric">140 mm</span></td>
                     </tr>
                     <tr>
-                      <th>Swivel Weight</th>
+                      <th>Tool Weight</th>
                       <td>0.60 lb</td>
                       <td><span class="metric">0.27 kg</span></td>
                     </tr>
