--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -123,8 +123,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>4.4–11 gpm</td>
-                      <td><span class="metric">17–42 l/min</span></td>
+                      <td>4.4–12 gpm</td>
+                      <td><span class="metric">17–45 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -132,7 +132,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">9/16 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -196,7 +196,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">9/16 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -280,7 +280,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 HP</td>
+                      <td colspan="2">9/16 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -344,7 +344,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 HP</td>
+                      <td colspan="2">9/16 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -408,7 +408,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 HP</td>
+                      <td colspan="2">9/16 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
