--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -147,7 +147,7 @@ master-slider: yes
                       <td><span class="metric">4.1 kg @ 1000 bar</span></td>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/16 NPT, M7, 1/4-28 LH/RH</td>
+                      <td colspan="2">1/16 NPT, M7, 1/4-28 LH &amp; RH</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
@@ -206,7 +206,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/16 NPT, 1/8 NPT, 1/8 BSPP, 1/4-28 LH/RH, 3/8-24 LH/RH</td>
+                      <td colspan="2">1/16 NPT, 1/8 NPT, 1/8 BSPP, 1/4-28 LH &amp; RH, 3/8-24 LH &amp; RH</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
@@ -265,7 +265,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/8 NPT, 1/4 NPT, 1/4 BSPP, 3/8-24 LH/RH, 9/16-18 LH/RH</td>
+                      <td colspan="2">1/8 NPT, 1/4 NPT, 1/4 BSPP, 3/8-24 LH &amp; RH, 9/16-18 LH &amp; RH</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
