--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -376,7 +376,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/4 MP</td>
+                      <td colspan="2">3/4 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -454,7 +454,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 HP</td>
+                      <td colspan="2">9/16 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
