--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -136,7 +136,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">9/16 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
@@ -209,7 +209,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 HP</td>
+                      <td colspan="2">9/16 HP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
