--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -215,7 +215,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">9/16 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
