--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -193,7 +193,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">9/16 MP Gland</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
