AST-200-V2, Badger specs, etc

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -167,7 +167,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/sFMKz5e7hGo?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="ast-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/ysEzQ_8Yt5U?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/I5LuBfN6Q3Q" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="tr-130-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc&autoplay=1" frameborder="0" allowfullscreen></iframe>
