--- a/manuals.html
+++ b/manuals.html
@@ -98,17 +98,9 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/autostroke">AST-100-2L</a></td>
-                <td>AutoStroke<br>For use with AutoBox hose tractors</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/AST-100_User_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/AST_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/AST-tool-talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/autostroke">AST-200</a></td>
-                <td>AutoStroke<br>For use with AutoBox hose tractors</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/AST-200_Manual.pdf" target="_blank" class="btn btn-sm">PL 629</a></td>
+                <td><a href="/autostroke">AST-200-V2</a></td>
+                <td>AUTOSTROKE<br>For use with AutoBox hose tractors</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/AST-200-V2_Manual.pdf" target="_blank" class="btn btn-sm">PL 629</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/AST_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/AST-tool-talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -741,6 +733,12 @@ permalink: /manuals
                 <td>ABX-500</td>
                 <td>AUTOBOX ABX-500 - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>AST-100-2L</td>
+                <td>AutoStroke<br>For use with AutoBox hose tractors</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/AST-100_User_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
