--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -83,7 +83,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
