--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-06.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-ast-06.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/ysEzQ_8Yt5U"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/I5LuBfN6Q3Q"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-07.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
@@ -55,7 +55,7 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge Heat Exchanger Cleaning Blockage Sensor&body=Check out the AutoStroke blockage sensor for the StoneAge AutoBox heat exchanger cleaning systems:  http://www.stoneagetools.com/autostroke">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge Heat Exchanger Cleaning Blockage Sensor&body=Check out the AutoStroke blockage sensor for the StoneAge AutoBox heat exchanger cleaning systems: http://www.stoneagetools.com/autostroke">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
@@ -75,7 +75,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -141,6 +141,7 @@ master-slider: yes
           </tbody>
           </table>
         </div>
+<!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
           <h3>Package includes:</h3>
             <ul class="list-unstyled">
@@ -149,6 +150,12 @@ master-slider: yes
               <li>Two 1/2-inch air lines</li>
               <li>Two 1/4-inch tubing lines in a nylon sheath</li>
             </ul>
+        </aside>
+-->
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
 
@@ -182,7 +189,7 @@ master-slider: yes
             <a href="#" data-featherlight="/assets/vid/vids.html #ast-vid">
               <img src="assets/vid/thumb/ast-vid.png" alt="AutoStroke exchanger cleaning accessory video" class="img-responsive" />
             </a>
-            <p class="caption">AutoStroke Overview<br>(AST-100-2L)</p>
+            <p class="caption">AutoStroke Overview</p>
           </div>
         </div>
       </section>
@@ -238,20 +245,20 @@ master-slider: yes
         <h5>Banshee Rotary Tools</h5></a>
       </div>
       <div class="item">
-        <a href="/lightweight-positioner"><img src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
-        <h5>Lightweight Positioner</h5></a>
-      </div>
-      <div class="item">
-        <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
-        <h5>AutoBox ABX-PRO</h5></a>
-      </div>
-      <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
         <h5>AutoBox ABX-2L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
         <h5>AutoBox ABX-3L</h5></a>
+      </div>
+      <div class="item">
+        <a href="/lightweight-positioner"><img src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+        <h5>Lightweight Positioner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
+        <h5>AutoBox ABX-PRO</h5></a>
       </div>
     </div>
   </div>
