contact team updates

--- a/loc-europe.html
+++ b/loc-europe.html
@@ -93,6 +93,7 @@ contact-europe: yes
             <p><strong>Jean-Baptiste Ternoy</strong>
             <br/>Sales Manager France<br/>
               Main: +44 (0) 1684 892065<br/>
+              Mobile: +33 771 01 74 43<br />
               <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a></p>
           </div>
         </div>
