--- a/loc-durango.html
+++ b/loc-durango.html
@@ -54,24 +54,24 @@ contact-durango: yes
             <a href="mailto:janet.mosher@stoneagetools.com">janet.mosher@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
+            <p><strong>Adam Duthie</strong><br/>
+              Customer Service Specialist<br/>
+              Main: +1 (970) 426-4178<br/>
+              <a href="mailto:adam.duthie@stoneagetools.com">adam.duthie@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
             <p><strong>Alan Lloyd</strong><br/>
               Customer Service Specialist<br/>
               Main: +1 (970) 403-1431
             <a href="mailto:alan.lloyd@stoneagetools.com">alan.lloyd@stoneagetools.com</a></p>
           </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6">
             <p><strong>Daniel Jaber</strong><br/>
               Customer Service Specialist<br/>
               Main: +1 (970) 403-1846
             <a href="mailto:daniel.jaber@stoneagetools.com">daniel.jaber@stoneagetools.com</a></p>
-          </div>
-          <div class="col-sm-6">
-            <p><strong>Kevin Simmons</strong><br/>
-              Customer Service Specialist<br/>
-              Main: +1 (970) 403-1430<br/>
-              <a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
@@ -82,20 +82,18 @@ contact-durango: yes
               <a href="mailto:ken.flint@stoneagetools.com">ken.flint@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
+            <p><strong>Kevin Simmons</strong><br/>
+              Customer Service Specialist<br/>
+              Main: +1 (970) 403-1430<br/>
+              <a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
             <p><strong>Mike Kreeger</strong><br/>
               SAS Technical Sales Lead<br/>
               Main: +1 (970) 403-1437<br/>
               <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a></p>
-          </div>
-        </div>
-
-        <h3 class="section-heading">Product Strategy &amp; Engineering</h3>
-        <div class="row">
-          <div class="col-sm-6">
-            <p><strong>Rawlin Brown</strong><br/>
-              Director of Product Strategy<br/>
-              Main: +1 (970) 403-1484<br/>
-            <a href="mailto:rawlin.brown@stoneagetools.com">rawlin.brown@stoneagetools.com</a></p>
           </div>
         </div>
         
